crates/ty_python_semantic/resources/mdtest/snapshots/final.md_-_Tests_for_the_`@typi…_-_Overloaded_methods_d…_(861757f48340ed92).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: final.md - Tests for the `@typing(_extensions).final` decorator - Overloaded methods decorated with `@final`
mdtest path: crates/ty_python_semantic/resources/mdtest/final.md
---

# Python source files

## stub.pyi

```
 1 | from typing import final, overload
 2 | 
 3 | class Good:
 4 |     @overload
 5 |     @final
 6 |     def bar(self, x: str) -> str: ...
 7 |     @overload
 8 |     def bar(self, x: int) -> int: ...
 9 |     @final
10 |     @overload
11 |     def baz(self, x: str) -> str: ...
12 |     @overload
13 |     def baz(self, x: int) -> int: ...
14 | 
15 | class ChildOfGood(Good):
16 |     @overload
17 |     def bar(self, x: str) -> str: ...
18 |     @overload
19 |     def bar(self, x: int) -> int: ...  # error: [override-of-final-method]
20 |     @overload
21 |     def baz(self, x: str) -> str: ...
22 |     @overload
23 |     def baz(self, x: int) -> int: ...  # error: [override-of-final-method]
24 | 
25 | class Bad:
26 |     @overload
27 |     def bar(self, x: str) -> str: ...
28 |     @overload
29 |     @final
30 |     # error: [invalid-overload]
31 |     def bar(self, x: int) -> int: ...
32 |     @overload
33 |     def baz(self, x: str) -> str: ...
34 |     @final
35 |     @overload
36 |     # error: [invalid-overload]
37 |     def baz(self, x: int) -> int: ...
38 | 
39 | class ChildOfBad(Bad):
40 |     @overload
41 |     def bar(self, x: str) -> str: ...
42 |     @overload
43 |     def bar(self, x: int) -> int: ...  # error: [override-of-final-method]
44 |     @overload
45 |     def baz(self, x: str) -> str: ...
46 |     @overload
47 |     def baz(self, x: int) -> int: ...  # error: [override-of-final-method]
```

## main.py

```
 1 | from typing import overload, final
 2 | 
 3 | class Good:
 4 |     @overload
 5 |     def f(self, x: str) -> str: ...
 6 |     @overload
 7 |     def f(self, x: int) -> int: ...
 8 |     @final
 9 |     def f(self, x: int | str) -> int | str:
10 |         return x
11 | 
12 | class ChildOfGood(Good):
13 |     @overload
14 |     def f(self, x: str) -> str: ...
15 |     @overload
16 |     def f(self, x: int) -> int: ...
17 | 
18 |     # error: [override-of-final-method]
19 |     def f(self, x: int | str) -> int | str:
20 |         return x
21 | 
22 | class Bad:
23 |     @overload
24 |     @final
25 |     def f(self, x: str) -> str: ...  # error: [invalid-overload]
26 |     @overload
27 |     def f(self, x: int) -> int: ...
28 |     def f(self, x: int | str) -> int | str:
29 |         return x
30 | 
31 |     @final
32 |     @overload
33 |     def g(self, x: str) -> str: ...  # error: [invalid-overload]
34 |     @overload
35 |     def g(self, x: int) -> int: ...
36 |     def g(self, x: int | str) -> int | str:
37 |         return x
38 | 
39 |     @overload
40 |     def h(self, x: str) -> str: ...
41 |     @overload
42 |     @final
43 |     def h(self, x: int) -> int: ...  # error: [invalid-overload]
44 |     def h(self, x: int | str) -> int | str:
45 |         return x
46 | 
47 |     @overload
48 |     def i(self, x: str) -> str: ...
49 |     @final
50 |     @overload
51 |     def i(self, x: int) -> int: ...  # error: [invalid-overload]
52 |     def i(self, x: int | str) -> int | str:
53 |         return x
54 | 
55 | class ChildOfBad(Bad):
56 |     # TODO: these should all cause us to emit Liskov violations as well
57 |     f = None  # error: [override-of-final-method]
58 |     g = None  # error: [override-of-final-method]
59 |     h = None  # error: [override-of-final-method]
60 |     i = None  # error: [override-of-final-method]
```

# Diagnostics

```
error[override-of-final-method]: Cannot override `Good.bar`
  --> src/stub.pyi:19:9
   |
19 |     def bar(self, x: int) -> int: ...  # error: [override-of-final-method]
   |         ^^^ Overrides a definition from superclass `Good`
info: `Good.bar` is decorated with `@final`, forbidding overrides
 --> src/stub.pyi:5:5
  |
5 |     @final
  |     ------
6 |     def bar(self, x: str) -> str: ...
  |         --- `Good.bar` defined here
help: Remove all overloads for `bar`
   |
15 | class ChildOfGood(Good):
   -     @overload
   -     def bar(self, x: str) -> str: ...
   -     @overload
   -     def bar(self, x: int) -> int: ...  # error: [override-of-final-method]
16 +     
17 +       # error: [override-of-final-method]
18 |     @overload
   |
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Good.baz`
  --> src/stub.pyi:23:9
   |
23 |     def baz(self, x: int) -> int: ...  # error: [override-of-final-method]
   |         ^^^ Overrides a definition from superclass `Good`
info: `Good.baz` is decorated with `@final`, forbidding overrides
  --> src/stub.pyi:9:5
   |
 9 |     @final
   |     ------
10 |     @overload
11 |     def baz(self, x: str) -> str: ...
   |         --- `Good.baz` defined here
help: Remove all overloads for `baz`
   |
19 |     def bar(self, x: int) -> int: ...  # error: [override-of-final-method]
   -     @overload
   -     def baz(self, x: str) -> str: ...
   -     @overload
   -     def baz(self, x: int) -> int: ...  # error: [override-of-final-method]
20 +     
21 +       # error: [override-of-final-method]
22 |
   |
note: This is an unsafe fix and may change runtime behavior

```

```
error[invalid-overload]: `@final` decorator should be applied only to the first overload
  --> src/stub.pyi:26:5
   |
26 | /     @overload
27 | |     def bar(self, x: str) -> str: ...
   | |_____________________________________- First overload defined here
28 |       @overload
29 |       @final
   |       ------
30 |       # error: [invalid-overload]
31 |       def bar(self, x: int) -> int: ...
   |           ^^^

```

```
error[invalid-overload]: `@final` decorator should be applied only to the first overload
  --> src/stub.pyi:32:5
   |
32 | /     @overload
33 | |     def baz(self, x: str) -> str: ...
   | |_____________________________________- First overload defined here
34 |       @final
   |       ------
35 |       @overload
36 |       # error: [invalid-overload]
37 |       def baz(self, x: int) -> int: ...
   |           ^^^

```

```
error[override-of-final-method]: Cannot override `Bad.bar`
  --> src/stub.pyi:43:9
43 |     def bar(self, x: int) -> int: ...  # error: [override-of-final-method]
   |         ^^^ Overrides a definition from superclass `Bad`
info: `Bad.bar` is decorated with `@final`, forbidding overrides
  --> src/stub.pyi:27:9
27 |     def bar(self, x: str) -> str: ...
   |         --- `Bad.bar` defined here
help: Remove all overloads for `bar`
   |
39 | class ChildOfBad(Bad):
   -     @overload
   -     def bar(self, x: str) -> str: ...
   -     @overload
   -     def bar(self, x: int) -> int: ...  # error: [override-of-final-method]
40 +     
41 +       # error: [override-of-final-method]
42 |     @overload
   |
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Bad.baz`
  --> src/stub.pyi:47:9
47 |     def baz(self, x: int) -> int: ...  # error: [override-of-final-method]
   |         ^^^ Overrides a definition from superclass `Bad`
info: `Bad.baz` is decorated with `@final`, forbidding overrides
  --> src/stub.pyi:33:9
33 |     def baz(self, x: str) -> str: ...
   |         --- `Bad.baz` defined here
help: Remove all overloads for `baz`
   |
43 |     def bar(self, x: int) -> int: ...  # error: [override-of-final-method]
   -     @overload
   -     def baz(self, x: str) -> str: ...
   -     @overload
   -     def baz(self, x: int) -> int: ...  # error: [override-of-final-method]
44 +     
45 +       # error: [override-of-final-method]
   |
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Good.f`
  --> src/main.py:19:9
19 |     def f(self, x: int | str) -> int | str:
   |         ^ Overrides a definition from superclass `Good`
info: `Good.f` is decorated with `@final`, forbidding overrides
 --> src/main.py:8:5
  |
8 |     @final
  |     ------
9 |     def f(self, x: int | str) -> int | str:
  |         - `Good.f` defined here
help: Remove all overloads and the implementation for `f`
   |
12 | class ChildOfGood(Good):
   -     @overload
   -     def f(self, x: str) -> str: ...
   -     @overload
   -     def f(self, x: int) -> int: ...
13 +     pass
14 +     pass
15 |
16 |     # error: [override-of-final-method]
   -     def f(self, x: int | str) -> int | str:
   -         return x
17 +     pass
18 |
   |
note: This is an unsafe fix and may change runtime behavior

```

```
error[invalid-overload]: `@final` decorator should be applied only to the overload implementation
  --> src/main.py:23:5
   |
23 |     @overload
   |     ---------
24 |     @final
   |     ------
25 |     def f(self, x: str) -> str: ...  # error: [invalid-overload]
   |         ^
26 |     @overload
27 |     def f(self, x: int) -> int: ...
28 |     def f(self, x: int | str) -> int | str:
   |         - Implementation defined here

```

```
error[invalid-overload]: `@final` decorator should be applied only to the overload implementation
  --> src/main.py:31:5
   |
31 |     @final
   |     ------
32 |     @overload
   |     ---------
33 |     def g(self, x: str) -> str: ...  # error: [invalid-overload]
   |         ^
34 |     @overload
35 |     def g(self, x: int) -> int: ...
36 |     def g(self, x: int | str) -> int | str:
   |         - Implementation defined here

```

```
error[invalid-overload]: `@final` decorator should be applied only to the overload implementation
  --> src/main.py:41:5
   |
41 |     @overload
   |     ---------
42 |     @final
   |     ------
43 |     def h(self, x: int) -> int: ...  # error: [invalid-overload]
   |         ^
44 |     def h(self, x: int | str) -> int | str:
   |         - Implementation defined here

```

```
error[invalid-overload]: `@final` decorator should be applied only to the overload implementation
  --> src/main.py:49:5
   |
49 |     @final
   |     ------
50 |     @overload
   |     ---------
51 |     def i(self, x: int) -> int: ...  # error: [invalid-overload]
   |         ^
52 |     def i(self, x: int | str) -> int | str:
   |         - Implementation defined here

```

```
error[override-of-final-method]: Cannot override `Bad.f`
  --> src/main.py:57:5
57 |     f = None  # error: [override-of-final-method]
   |     ^ Overrides a definition from superclass `Bad`
info: `Bad.f` is decorated with `@final`, forbidding overrides
  --> src/main.py:28:9
28 |     def f(self, x: int | str) -> int | str:
   |         - `Bad.f` defined here
help: Remove the override of `f`

```

```
error[override-of-final-method]: Cannot override `Bad.g`
  --> src/main.py:58:5
58 |     g = None  # error: [override-of-final-method]
   |     ^ Overrides a definition from superclass `Bad`
info: `Bad.g` is decorated with `@final`, forbidding overrides
  --> src/main.py:36:9
36 |     def g(self, x: int | str) -> int | str:
   |         - `Bad.g` defined here
help: Remove the override of `g`

```

```
error[override-of-final-method]: Cannot override `Bad.h`
  --> src/main.py:59:5
59 |     h = None  # error: [override-of-final-method]
   |     ^ Overrides a definition from superclass `Bad`
info: `Bad.h` is decorated with `@final`, forbidding overrides
  --> src/main.py:44:9
44 |     def h(self, x: int | str) -> int | str:
   |         - `Bad.h` defined here
help: Remove the override of `h`

```

```
error[override-of-final-method]: Cannot override `Bad.i`
  --> src/main.py:60:5
60 |     i = None  # error: [override-of-final-method]
   |     ^ Overrides a definition from superclass `Bad`
info: `Bad.i` is decorated with `@final`, forbidding overrides
  --> src/main.py:52:9
52 |     def i(self, x: int | str) -> int | str:
   |         - `Bad.i` defined here
help: Remove the override of `i`

```
